Bug 290487 - KMyMoney crashes when generating budget report
Summary: KMyMoney crashes when generating budget report
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.5.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
: 285721 290445 292133 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-03 12:08 UTC by Jason
Modified: 2012-01-22 14:00 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Anonymous test file (197.00 KB, application/zip)
2012-01-11 08:19 UTC, Jason
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jason 2012-01-03 12:08:07 UTC
Application: kmymoney (4.5.3)
KDE Platform Version: 4.7.3 (4.7.3)
Qt Version: 4.7.4
Operating System: Linux 3.0.0-14-generic i686
Distribution: Ubuntu 11.10

-- Information about the crash:
- What I was doing when the application crashed: I was generating a budget report and while the report was generating, KMyMoney crashed.

The crash can be reproduced every time.

-- Backtrace:
Application: KMyMoney (kmymoney), signal: Aborted
[Current thread is 1 (Thread 0xb783a930 (LWP 20222))]

Thread 2 (Thread 0xb4f8db70 (LWP 20223)):
#0  0x00c57d10 in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0x017147d5 in do_gettime (frac=0xb4f8d020, sec=0xb4f8d018) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0x017e74b6 in QTimerInfoList::updateCurrentTime (this=0xabc4964) at kernel/qeventdispatcher_unix.cpp:339
#4  0x017e780a in QTimerInfoList::timerWait (this=0xabc4964, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0x017e6053 in timerSourcePrepareHelper (src=<optimized out>, timeout=0xb4f8d12c) at kernel/qeventdispatcher_glib.cpp:136
#6  0x017e60ed in timerSourcePrepare (source=0xabc4930, timeout=<optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0x025bd88c in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0x025be637 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0x025bec2a in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#10 0x017e6b37 in QEventDispatcherGlib::processEvents (this=0xabc4198, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0x017b71dd in QEventLoop::processEvents (this=0xb4f8d2b0, flags=...) at kernel/qeventloop.cpp:149
#12 0x017b7421 in QEventLoop::exec (this=0xb4f8d2b0, flags=...) at kernel/qeventloop.cpp:201
#13 0x016ba90b in QThread::exec (this=0xabc2870) at thread/qthread.cpp:498
#14 0x01797e2d in QInotifyFileSystemWatcherEngine::run (this=0xabc2870) at io/qfilesystemwatcher_inotify.cpp:248
#15 0x016bd7b3 in QThreadPrivate::start (arg=0xabc2870) at thread/qthread_unix.cpp:331
#16 0x00286d31 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#17 0x099960ce in clone () from /lib/i386-linux-gnu/libc.so.6
Backtrace stopped: Not enough registers or memory available to unwind further

Thread 1 (Thread 0xb783a930 (LWP 20222)):
[KCrash Handler]
#7  0x00c2a416 in __kernel_vsyscall ()
#8  0x098f1c8f in raise () from /lib/i386-linux-gnu/libc.so.6
#9  0x098f52b5 in abort () from /lib/i386-linux-gnu/libc.so.6
#10 0x00a054ed in __gnu_cxx::__verbose_terminate_handler() () from /usr/lib/i386-linux-gnu/libstdc++.so.6
#11 0x00a03283 in ?? () from /usr/lib/i386-linux-gnu/libstdc++.so.6
#12 0x00a032bf in std::terminate() () from /usr/lib/i386-linux-gnu/libstdc++.so.6
#13 0x00a03464 in __cxa_rethrow () from /usr/lib/i386-linux-gnu/libstdc++.so.6
#14 0x017b7569 in QEventLoop::exec (this=0xbff65d14, flags=...) at kernel/qeventloop.cpp:214
#15 0x017bc19d in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1064
#16 0x06e5b8f4 in QApplication::exec () at kernel/qapplication.cpp:3760
#17 0x08086c4f in main (argc=) at /build/buildd/kmymoney-4.5.3/kmymoney/main.cpp:260

Possible duplicates by query: bug 290484, bug 290413, bug 290335, bug 290292, bug 290262.

Reported using DrKonqi
Comment 1 Cristian Oneț 2012-01-06 10:29:23 UTC
Could you attach an anonymous [1] file version with which we can reproduce
this?

[1]
http://kmymoney2.sourceforge.net/kde4/online-manual/details.formats.anonymous.html
Comment 2 Jason 2012-01-11 08:19:43 UTC
Created attachment 67688 [details]
Anonymous test file

I tried running a budge report on this anon file and it caused KMyMoney to crash, just like my real file. I had to zip it in order to upload it.
Comment 3 Jason 2012-01-11 08:21:07 UTC
Sorry for the typo, I meant that I ran a budget report.
Comment 4 Cristian Oneț 2012-01-11 19:04:54 UTC
Git commit edece5d1c2a46383d4acbe9d9e3c0ab79b5f2f27 by Cristian Oneț.
Committed on 11/01/2012 at 20:02.
Pushed by conet into branch 'master'.

Make sure that the account id is valid before using it in the !isStandardAccount test to prevent an infinite loop.

M  +2    -2    kmymoney/reports/reportaccount.cpp

http://commits.kde.org/kmymoney/edece5d1c2a46383d4acbe9d9e3c0ab79b5f2f27
Comment 5 Cristian Oneț 2012-01-11 19:05:49 UTC
Git commit 105bdb33e2d3287f6dfcd11adcc585f6edf1ea01 by Cristian Oneț.
Committed on 11/01/2012 at 20:02.
Pushed by conet into branch '4.6'.

Make sure that the account id is valid before using it in the !isStandardAccount test to prevent an infinite loop.
(cherry picked from commit edece5d1c2a46383d4acbe9d9e3c0ab79b5f2f27)

M  +2    -2    kmymoney/reports/reportaccount.cpp

http://commits.kde.org/kmymoney/105bdb33e2d3287f6dfcd11adcc585f6edf1ea01
Comment 6 Cristian Oneț 2012-01-11 19:19:38 UTC
*** Bug 290445 has been marked as a duplicate of this bug. ***
Comment 7 Cristian Oneț 2012-01-11 19:24:06 UTC
I think that this was just the effect of BUG 280172. Now I regret that I didn't
fix the loop back then but I guess it's better later then never.
Comment 8 Cristian Oneț 2012-01-15 08:20:01 UTC
*** Bug 285721 has been marked as a duplicate of this bug. ***
Comment 9 Cristian Oneț 2012-01-22 14:00:56 UTC
*** Bug 292133 has been marked as a duplicate of this bug. ***