Make sure that the account id is valid before using it in the !isStandardAccount test to prevent an infinite loop.

BUG: 290487